--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
       font-family: sans-serif;
       padding: 40px;
       background-color: #f8f8f8;
-      line-height: 1.6;
+      line-height: 1;
     }
   </style>
 </head>
 <body>
   <h1>《新宿仇之路》公告栏</h1>
-  <p>测试</p>
-  <p>测试2</p>
-  <p>测试3</p>
+  <p>注意：目前游戏版本为早期初版，并非完整内容！后续将以更新补丁陆续为游戏补充完整。</p>
+  <p>尚未完成的内容有：</p>
+  <p>1. 完美结局、两个新隐藏结局。</p>
+  <p>2. 所有结局图片、结局视频、结局奖励、作者文章、以及角色介绍。</p>
+  <p>3. 任务成就系统</p>
+  <p>请关注日后游戏补丁更新。若发现游戏有bug或其他问题，请与作者联系。</p>
 </body>
 </html>
