--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <li>任务成就系统</li>
   </ol>
   <p>请关注日后游戏补丁更新。若发现游戏有 bug 或其他问题，请与作者联系。</p>
+  <p>提示：游戏中按TAB查看人数列表如果跟原版TAB重叠，需要自行将tab按键设置为其他。</p>
 </body>
 </html>
