--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
 </head>
 <body>
   <h1>《新宿仇之路》公告栏</h1>
-  <p>注意：目前游戏版本为早期初版，并非完整内容！后续将以更新补丁陆续为游戏补充完整。</p>
-  <p>尚未完成的内容有：</p>
+  <p style="color: red;">更新补丁5.08已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E8%A1%A5%E4%B8%815.08.zip" target="_blank">点击下载补丁</a> </p>
+  <p>7/10/2025 更新补丁5.08：</p>
   <ol>
-    <li>完美结局、两个新隐藏结局。</li>
-    <li>所有结局图片、结局视频、结局奖励、作者文章、以及角色介绍。</li>
-    <li>任务成就系统</li>
+    <li>【内容新增】</li>
+    <li>1. 添加目前所有十五个结局的通关后续故事（为简单难度通关奖励）</li>
+    <li>2. 添加功能由难度决定解锁结局内容。（在这个补丁更新之前已经通关了的玩家，所通关的结局将被记录为简单难度通关。）</li>
+    <li>【修正内容】</li>
+    <li>1. 目前所发现的所有大大小小的bug、问题、错字等全部修复</li>
+    <li>2. 新增贪狼山石洞墓碑触发剧情的条件，避免初玩玩家剧情中被攻击。</li>
+    <li>3. 降低扬州大战中，普通难度，选择帮北派攻城第一战的难度。</li>
+    <li>4. 降低晋阳决战中，单人线，守护六合刀门的难度。</li>
+    <li>5. 调整真结局最终战触发剧情的条件。</li>
+    <li>6. 更新结局列表视频</li>
+    <li>7. 玩家设置按键时，更新“恢复默认”的按键配置，避免旧版的tab功能与新版重叠。</li>
+    <li>（若按tab新旧版同时出现重叠，请自行在自定设置里将tab键设置为其他按键）</li>
   </ol>
-  <p>请关注日后游戏补丁更新。若发现游戏有 bug 或其他问题，请与作者联系。</p>
-  <p>提示：游戏中按TAB查看人数列表如果跟原版TAB重叠，需要自行将tab按键设置为其他。</p>
+  <ol>
+    <li>【下次更新预期内容】</li>
+    <li>下次更新日期预定2025年12月。预计将更新以下内容：</li>
+    <li>1. 结局十六：英雄之路（完美结局）</li>
+    <li>2. 结局十七：叛徒之路（新隐藏结局）</li>
+    <li>3. 游戏统计功能</li>
+    <li>4. 通关普通难度的结局奖励</li>
+  </ol>
+  <p>注意：目前游戏版本为早期初版，并非完整内容！后续将以更新补丁陆续为游戏补充完整。</p>
 </body>
 </html>
