--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <h1>《新宿仇之路》公告栏</h1>
   <p style="color: red;">更新补丁5.08已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E8%A1%A5%E4%B8%815.08.zip" target="_blank">点击下载补丁</a> </p>
   <p>7/10/2025 更新补丁5.08：</p>
+  <p>【内容新增】</p>
   <ol>
-    <li>【内容新增】</li>
     <li>1. 添加目前所有十五个结局的通关后续故事（为简单难度通关奖励）</li>
     <li>2. 添加功能由难度决定解锁结局内容。（在这个补丁更新之前已经通关了的玩家，所通关的结局将被记录为简单难度通关。）</li>
-    <li>【修正内容】</li>
+  </ol>
+  <p>【修正内容】</p>
+  <ol>
     <li>1. 目前所发现的所有大大小小的bug、问题、错字等全部修复</li>
     <li>2. 新增贪狼山石洞墓碑触发剧情的条件，避免初玩玩家剧情中被攻击。</li>
     <li>3. 降低扬州大战中，普通难度，选择帮北派攻城第一战的难度。</li>
@@ -31,8 +33,8 @@
     <li>7. 玩家设置按键时，更新“恢复默认”的按键配置，避免旧版的tab功能与新版重叠。</li>
     <li>（若按tab新旧版同时出现重叠，请自行在自定设置里将tab键设置为其他按键）</li>
   </ol>
+  <p>【下次更新预期内容】</p>
   <ol>
-    <li>【下次更新预期内容】</li>
     <li>下次更新日期预定2025年12月。预计将更新以下内容：</li>
     <li>1. 结局十六：英雄之路（完美结局）</li>
     <li>2. 结局十七：叛徒之路（新隐藏结局）</li>
