--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>《新宿仇之路》公告栏</h1>
   <p style="color: red;">更新补丁5.08已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E8%A1%A5%E4%B8%815.08.zip" target="_blank">点击下载补丁</a> </p>
-  <p>7/10/2025 更新补丁5.08：</p>
+  <p>7/10/2025 更新补丁5.08：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
   <p>【内容新增】</p>
   <ol>
     <li>添加目前所有十五个结局的通关后续故事（为简单难度通关奖励）</li>
