--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>《新宿仇之路》公告栏</h1>
   <p style="color: red;">更新补丁5.08已发布！如果在7月11日下载过的补丁，请重新下载！修复了通关后无法解锁结局的问题。<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E8%A1%A5%E4%B8%815.08(%E6%96%B0).zip" target="_blank">点击下载补丁</a> </p>
-  <p>若出现点击结局奖励按钮报错，请至流星资源网下载替换启动器exe</p>
+  <p>若出现点击结局奖励按钮报错，请单独下载启动器替换<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E6%96%B0%E5%AE%BF%E4%BB%87%E4%B9%8B%E8%B7%AF%E5%90%AF%E5%8A%A8%E5%99%A8exe.zip" target="_blank">点击下载启动器</a></p>
   <p>7/10/2025 更新补丁5.08：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
   <p>【内容新增】</p>
   <ol>
