--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
 </head>
 <body>
   <h1>《新宿仇之路》公告栏</h1>
-  <p style="color: red;">更新补丁5.08已发布！如果在7月11日下载过的补丁，请重新下载！修复了通关后无法解锁结局的问题。<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E8%A1%A5%E4%B8%815.08(%E6%96%B0).zip" target="_blank">点击下载补丁</a> </p>
-  <p>若出现点击结局奖励按钮报错，请单独下载启动器替换<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-11/%E6%96%B0%E5%AE%BF%E4%BB%87%E4%B9%8B%E8%B7%AF%E5%90%AF%E5%8A%A8%E5%99%A8exe.zip" target="_blank">点击下载启动器</a></p>
-  <p>7/10/2025 更新补丁5.08：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
+  <p style="color: red;">更新补丁5.09已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-17/%E8%A1%A5%E4%B8%815.09.zip" target="_blank">点击下载补丁</a> </p>
+  <p>7/16/2025 更新补丁5.09：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
   <p>【内容新增】</p>
   <ol>
-    <li>添加目前所有十五个结局的通关后续故事（为简单难度通关奖励）</li>
-    <li>添加功能由难度决定解锁结局内容。（在这个补丁更新之前已经通关了的玩家，所通关的结局将被记录为简单难度通关。）</li>
+    <li>简单难度与极易难度，将显示关卡攻略提示</li>
   </ol>
   <p>【修正内容】</p>
   <ol>
-    <li>目前所发现的所有大大小小的bug、问题、错字等全部修复</li>
-    <li>新增贪狼山石洞墓碑触发剧情的条件，避免初玩玩家剧情中被攻击。</li>
-    <li>降低扬州大战中，普通难度，选择帮北派攻城第一战的难度。</li>
-    <li>降低晋阳决战中，单人线，守护六合刀门的难度。</li>
-    <li>调整真结局最终战触发剧情的条件。</li>
-    <li>更新结局列表视频</li>
-    <li>玩家设置按键时，更新“恢复默认”的按键配置，避免旧版的tab功能与新版重叠。（若按tab新旧版同时出现重叠，请自行在自定设置里将tab键设置为其他按键）</li>
+    <li>修复目前发现的所有bug、问题、错字等</li>
+    <li>扬州城南派路线，助起义军离城难度降低</li>
+    <li>扬州城北派路线，攻城难度降低</li>
+    <li>扬州城北派路线，阻止起义军离城难度稍微降低</li>
+    <li>晋阳北派路线，守护六合刀门难度降低</li>
+    <li>天山南派路线，攻鼎时调整唐厉峻不再容易被围死（但有时仍需要主动去救援）</li>
+    <li>结局15最终boss调整应对某打法</li>
+    <li>增加数据保护机制</li>
   </ol>
   <p>【下次更新预期内容】</p>
   <p>下次更新日期预定2025年12月。预计将更新以下内容：</p>
@@ -40,7 +39,9 @@
     <li>结局十七：叛徒之路（新隐藏结局）</li>
     <li>游戏统计功能</li>
     <li>通关普通难度的结局奖励</li>
+    <li>回想再战功能</li>
   </ol>
   <p>注意：目前游戏版本为早期初版，并非完整内容！后续将以更新补丁陆续为游戏补充完整。</p>
+  <p>（若按tab新旧版同时出现重叠，请自行在自定设置里将tab键设置为其他按键）</p>
 </body>
 </html>
