--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
 </head>
 <body>
   <h1>《新宿仇之路》公告栏</h1>
-  <p style="color: red;">更新补丁5.09已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-17/%E8%A1%A5%E4%B8%815.09.zip" target="_blank">点击下载补丁</a> </p>
-  <p>7/16/2025 更新补丁5.09：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
+  <p style="color: red;">更新补丁5.10已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-25/%E8%A1%A5%E4%B8%815.10.zip" target="_blank">点击下载补丁</a> </p>
+  <p>7/24/2025 更新补丁5.10：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
   <p>【内容新增】</p>
   <ol>
-    <li>简单难度与极易难度，将显示关卡攻略提示</li>
+    <li>修正无法解锁困难难度三星的bug以及修复闪退等问题</li>
   </ol>
   <p>【修正内容】</p>
   <ol>
-    <li>修复目前发现的所有bug、问题、错字等</li>
-    <li>扬州城南派路线，助起义军离城难度降低</li>
-    <li>扬州城北派路线，攻城难度降低</li>
-    <li>扬州城北派路线，阻止起义军离城难度稍微降低</li>
-    <li>晋阳北派路线，守护六合刀门难度降低</li>
-    <li>天山南派路线，攻鼎时调整唐厉峻不再容易被围死（但有时仍需要主动去救援）</li>
-    <li>结局15最终boss调整应对某打法</li>
-    <li>增加数据保护机制</li>
+    <li>修复几处关键bug、以及错字等</li>
+    <li>修复游戏可能闪退的问题</li>
+    <li>修复无法解锁困难难度通关三星的BUG（需要重头开始通关困难难度方能解锁）</li>
+    <li>修复无法记录通关周目次数的问题（目前尚未开启“游戏统计”功能，但已开始记录玩家的通关次数）</li>
+    <li>增加文件保护机制</li>
   </ol>
   <p>【下次更新预期内容】</p>
   <p>下次更新日期预定2025年12月。预计将更新以下内容：</p>
@@ -42,6 +39,6 @@
     <li>回想再战功能</li>
   </ol>
   <p>注意：目前游戏版本为早期初版，并非完整内容！后续将以更新补丁陆续为游戏补充完整。</p>
-  <p>（若按tab新旧版同时出现重叠，请自行在自定设置里将tab键设置为其他按键）</p>
+  <p>不要擅自修改、添加、更换游戏任何文件！否则会出错误或有不可预料的bug！</p>
 </body>
 </html>
