--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
 </head>
 <body>
   <h1>《新宿仇之路》公告栏</h1>
-  <p style="color: red;">更新补丁5.10已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-07-25/%E8%A1%A5%E4%B8%815.10.zip" target="_blank">点击下载补丁</a> </p>
-  <p>7/24/2025 更新补丁5.10：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
+  <p style="color: red;">更新补丁5.11已发布！<a href="https://www.lxres.com/d/file/DanJiRenWu/DuLiYunXing/2025-09-17/%E8%A1%A5%E4%B8%815.11.zip" target="_blank">点击下载补丁</a> </p>
+  <p>9/15/2025 更新补丁5.11：解压后，将所有文件直接覆盖在游戏主文件夹里</p>
   <p>【内容新增】</p>
   <ol>
-    <li>修正无法解锁困难难度三星的bug以及修复闪退等问题</li>
+    <li>添加新功能键F8查看目前江湖人际声望</li>
+    <li>黄潇婉的结局，补充徐文偌对话</li>
   </ol>
   <p>【修正内容】</p>
   <ol>
-    <li>修复几处关键bug、以及错字等</li>
-    <li>修复游戏可能闪退的问题</li>
-    <li>修复无法解锁困难难度通关三星的BUG（需要重头开始通关困难难度方能解锁）</li>
-    <li>修复无法记录通关周目次数的问题（目前尚未开启“游戏统计”功能，但已开始记录玩家的通关次数）</li>
-    <li>增加文件保护机制</li>
+    <li>修正威震天山，为南派夺旗无法增加南派声望的bug</li>
+    <li>修正南派声望极高时，扬州与柯肆对话后被锁住无法移动的bug</li>
+    <li>修正在通关某个结局路线后，再以低难度通关一次，会导致星数减少的bug</li>
+    <li>调整增加普通难度下结局四与结局八的难度</li>
+    <li>多周目后将不再提示新武器与增减益等数值提示</li>
+    <li>修正其余等十五项错误</li>
   </ol>
   <p>【下次更新预期内容】</p>
-  <p>下次更新日期预定2025年12月。预计将更新以下内容：</p>
+  <p>下次大型更新日期预定2026年1月。预计将更新以下内容：</p>
   <ol>
     <li>结局十六：英雄之路（完美结局）</li>
     <li>结局十七：叛徒之路（新隐藏结局）</li>
@@ -42,3 +44,4 @@
   <p>不要擅自修改、添加、更换游戏任何文件！否则会出错误或有不可预料的bug！</p>
 </body>
 </html>
+
